Some bug fixes
